--- a/index.html
+++ b/index.html
@@ -142,7 +142,8 @@ nav {
     <section class="wave-bg text-white py-16 bg-gradient-to-r from-blue-500 to-purple-500">
         <div class="container mx-auto px-4">
             <div class="max-w-3xl mx-auto text-center mb-12">
-                <h1 class="text-4xl md:text-5xl font-bold mb-6">India's First AI-Powered Livelihood Platform</h1>
+                <h1 class="text-4xl md:text-5xl font-bold mb-6">Empowering Potential: An Inclusive Job 
+Platform for People with Disabilities</h1>
                 <p class="text-xl mb-8">for Persons with Disabilities</p>
                 <!-- Job Search Form -->
                 <div class="bg-white rounded-lg p-4 shadow-lg">
