--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@ nav {
 
 
     <div id="translator">
-        <header class="bg-white shadow-md fixed top-0 left-0 w-full z-50 mt-2" id="head">
+        <header class="bg-white shadow-md " id="head">
             <nav class="container mx-auto px-4 py-3 flex items-center justify-between">
                 <div class="flex items-center">
                     <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='300' height='50'%3E%3Ctext x='10' y='35' font-family='Arial' font-size='32' font-weight='bold' fill='%23FF5722'%3ESkillSync%3C/text%3E%3C/svg%3E" alt="SkillSync Logo" class="h-16">
@@ -865,5 +865,24 @@ function closeRegisterModal() {
 </script>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
